Menambahkan verifikasi kepemilikan google

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       Sewa Mobil Purwokerto Terpercaya | Site Trans - Nyaman & Efisien
     </title>
     <meta
+      name="google-site-verification"
+      content="QVvNcuvZxUYsQxpigNwT_zjnrTCNcgNra09IZsargpE"
+    />
+    <meta
       name="description"
       content="Site Trans menyediakan layanan sewa rental mobil di Purwokerto, Banyumas, dan sekitarnya. Pilihan armada lengkap (Avanza, Hiace, Elf) untuk perjalanan pribadi, bisnis, atau wisata yang nyaman dan aman."
     />
